--- a/package.json
+++ b/package.json
@@ -4,12 +4,32 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.0",
+    "@mobiscroll/react-lite": "^4.10.2",
+    "@progress/kendo-date-math": "^1.5.1",
+    "@progress/kendo-react-common": "^3.14.0",
+    "@progress/kendo-react-dropdowns": "^3.14.0",
+    "@progress/kendo-react-intl": "^3.14.0",
+    "@progress/kendo-react-scheduler": "^3.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "clear": "^0.1.0",
+    "date-fns": "^2.14.0",
+    "googleapis": "^52.0.0",
+    "mdbootstrap": "^4.19.0",
+    "mdbreact": "^4.27.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.25.0",
+    "react-bootstrap": "^1.0.1",
+    "react-datepicker": "^2.16.0",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
